# CENOP

./: DEPLOYMENT.md  DEPONS 3.0 – TRACE 2023-05-30.xml  DEPONS_COMPARISON.md  DEPONS_COMPARISON_REVIEW.md  DEPONS_TRACE.txt  DEPONS_to_Python_Shiny_Translation_Plan.md  IMPLEMENTATION_PLAN.md  README.md  app.py  app_backup.py  cprofile.prof  debug_short.txt  deploy.cmd  instrumented_log_2000_after_fix2.txt  instrumented_log_2000_after_fix3.txt  instrumented_log_profile.txt  instrumented_log_profile_after.txt  instrumented_log_profile_kdtree.txt  instrumented_log_profile_numba.txt  instrumented_log_profile_numba_warm.txt  minimal_app.py  pyproject.toml  read_pdf.py  test_app.py  test_shiny.py  tmp_instrumented_log.txt
DEPONS-master/: app.py
cenop/: .release_v0.1.0.txt  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  RELEASE_NOTES_v0.1.0.md  app.py  deploy.cmd  deploy_debug.cmd  pyproject.toml  requirements.txt  test_energy.py  test_minimal.py  test_monthly_files.py
cenop/.claude/: settings.local.json
cenop/cenop/: CHANGELOG.md
cenop/docs/: API.md  USER_GUIDE.md
cenop/optimizations/: numba_helpers.py
cenop/scripts/: download_emodnet_bathymetry.py  generate_central_baltic.py
cenop/tests/: test_births_deaths_consistency.py  test_births_deaths_consistency_longer.py  test_ci_benchmark.py  test_ci_history.py  test_dispersal.py  test_generate_perf_plot.py  test_loader_missing_monthly.py  test_loader_warnings_surface.py  test_long_births_deaths.py  test_numba_warmup.py  test_phase5.py  test_psm_accumulate.py  test_server_landscape_selector.py  test_simulation.py  test_smoke_births_deaths.py  test_social.py  test_social_adaptive.py  test_social_cache.py  test_social_masking.py  test_social_sparse_matmul.py  test_social_vectors_numba.py  test_sound.py  test_ui_settings_data_available.py  test_ui_settings_data_available_ui.py  test_ui_sidebar_landscape_refresh.py  test_update_baseline.py  test_warmup_numba.py
(+260 files in other folders)
